--- a/EmployeeCrud.AAPi/appsettings.json
+++ b/EmployeeCrud.AAPi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "EmployeeCrud",
+    "Audience": "EmployeeCrud",
+    "SecretKey": "dont-tell-anyone!"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=EmployeeDB;Integrated Security=True;Encrypt=False"
+  }
 }
