--- a/EmployeeCrud.AAPi/Properties/launchSettings.json
+++ b/EmployeeCrud.AAPi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54644",
-      "sslPort": 44324
+      "applicationUrl": "http://localhost:28087",
+      "sslPort": 44392
     }
   },
   "profiles": {
-    "EmployeeCrud.AAPi": {
+    "EmplyeeCrudByCleanArchit": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7037;http://localhost:5163",
+      "applicationUrl": "https://localhost:7126;http://localhost:5287",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
